# deafrica-coastlines

./: Dockerfile  pyproject.toml  requirements.in  requirements.txt  setup.py
coastlines/: continental.py  raster.py  vector.py
metadata/: coastlines_stac_catalog.json  coastlines_stac_collection.json  coastlines_stac_item.json
