[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "deafrica_coastlines"
authors = [{name = "Robbi Bishop-Taylor", email = "Robbi.BishopTaylor@ga.gov.au"}]
maintainers = [{name = "Digital Earth Africa", email = "systems@digitalearthafrica.org"}]
description = "Tools for running Digital Earth Africa Coastlines"
readme =  {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.9"
dependencies = [
    "aiohttp",
    "affine",
    "botocore",
    "click",
    "datacube",
    "deafrica_tools",
    "dea_tools",
    "Fiona",
    "geopandas",
    "matplotlib",
    "mock",
    "numpy",
    "odc-geo",
    "odc_ui",
    "pandas",
    "pygeos",
    "pyproj",
    "pyTMD",
    "python-geohash",
    "pytz",
    "PyYAML",
    "rasterio",
    "setuptools-scm",
    "scikit_image",
    "scikit_learn",
    "scipy",
    "shapely",
    "tqdm",
    "xarray",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/digitalearthafrica/deafrica-coastlines.git"
"Bug Tracker" = "https://github.com/digitalearthafrica/deafrica-coastlines/issues"

[project.scripts]
deafricacoastlines-raster = "coastlines.raster:generate_rasters_cli"
deafricacoastlines-vector = "coastlines.vector:generate_vectors_cli"
deafricacoastlines-continental = "coastlines.continental:continental_cli"

[tool.setuptools]
packages = ["coastlines"]

[tool.setuptools.dynamic]
version = {attr = "coastlines._version.__version__"}

[tool.setuptools_scm]
write_to = "coastlines/_version.py"

[tool.isort]
profile = "black"

[tool.black]
line-length = 100
